--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,6 +14,7 @@
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+		<h1>My Astro Lerning Blog</h1>
+		<p>This is where I will post about my hourney learning Astro.</p>
 	</body>
 </html>
