--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,5 +16,10 @@
 		<a href="/blog/">Blog</a>
 		<h1>My Astro Lerning Blog</h1>
 		<p>This is where I will post about my hourney learning Astro.</p>
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
 	</body>
 </html>
