--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Menu from '../components/menu.astro'
 const pageTitle = `Home page`
 ---
 
@@ -11,9 +12,7 @@ const pageTitle = `Home page`
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Menu />
 		<h1>{pageTitle}</h1>
 	</body>
 </html>
