--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,7 +12,7 @@ import Menu from '../components/menu.astro'
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Menu />
+		<Menu page="blog" />
 		<h1>{pageTitle}</h1>
 		<p>This is where I will post about my journey learning Astro.</p>
     <ul>
