--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const pageTitle = `Home page`
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Menu />
+		<Menu page="home" />
 		<h1>{pageTitle}</h1>
 	</body>
 </html>
