--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -1,3 +1,25 @@
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+---
+const { page } = Astro.props
+---
+
+<style>
+  a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    color: orange;
+    opacity: .8;
+  }
+
+  a.active,
+  a:hover {
+    opacity: 1;
+  }
+
+  a:visited {
+    color: orange;
+  }
+</style>
+
+<a class={page === `home` ? `active` : ``} href="/">Home</a>
+<a class={page === `about` ? `active` : ``} href="/about/">About</a>
+<a class={page === `blog` ? `active` : ``} href="/blog/">Blog</a>
