feat: add global styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css'
 import Menu from '../components/menu.astro'
 const pageTitle = `Home page`
 ---
@@ -13,6 +14,5 @@ const pageTitle = `Home page`
 	</head>
 	<body>
 		<Menu page="home" />
-		<h1>{pageTitle}</h1>
 	</body>
 </html>
