--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,8 @@
 ---
 import '../styles/global.css'
-import Menu from '../components/menu.astro'
+import Navigation from '../components/Navigation.astro'
+import Footer from '../components/Footer.astro'
+
 const pageTitle = `About Me`
 const identity = {
 	firstName: `Rubens`,
@@ -37,7 +39,7 @@ const textCase = `initial`
 		</style>
 	</head>
 	<body>
-		<Menu page="about" />
+		<Navigation page="about" />
 		<h1>{pageTitle}</h1>
 		<h2>... and my new Astro site!</h2>
 
@@ -55,5 +57,6 @@ const textCase = `initial`
 		</ul>
 		<p>My skills are:</p>
 		<ul>{skills.map((skill) => <li class="skill">{skill}</li>)}</ul>
+		<Footer />
 	</body>
 </html>
