--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import '../styles/global.css'
-import Menu from '../components/menu.astro'
+import Navigation from '../components/Navigation.astro'
+import Footer from '../components/Footer.astro'
+
 const pageTitle = `Home page`
 ---
 
@@ -13,6 +15,7 @@ const pageTitle = `Home page`
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Menu page="home" />
+		<Navigation page="home" />
+		<Footer />
 	</body>
 </html>
