--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/global.css'
-import Navigation from '../components/Navigation.astro'
 import Footer from '../components/Footer.astro'
+import Header from '../components/Header.astro'
 
 const pageTitle = `Home page`
 ---
@@ -15,7 +15,7 @@ const pageTitle = `Home page`
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation page="home" />
+		<Header page="home" />
 		<Footer />
 	</body>
 </html>
