--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css'
-import Navigation from '../components/Navigation.astro'
+import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 
 const pageTitle = `About Me`
@@ -39,7 +39,7 @@ const textCase = `initial`
 		</style>
 	</head>
 	<body>
-		<Navigation page="about" />
+		<Header page="about" />
 		<h1>{pageTitle}</h1>
 		<h2>... and my new Astro site!</h2>
 
