refactor: extract base layout

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,4 @@ const { page } = Astro.props
   </nav>
 </header>
 
-<script>
-  import '../scripts/menu.js'
-</script>
+<script src="../scripts/menu.js"></script>
