--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,9 @@
 ---
-import '../styles/global.css'
-import Footer from '../components/Footer.astro'
-import Header from '../components/Header.astro'
+import BaseLayout from '../layouts/BaseLayout.astro'
 
 const pageTitle = `Home page`
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header page="home" />
-		<Footer />
-	</body>
-</html>
+<BaseLayout {pageTitle} page="home">
+	<h2>My awesome blog subtitle</h2>
+</BaseLayout>
