feat: give posts a layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
-
-const pageTitle = `Home page`
 ---
 
-<BaseLayout {pageTitle} page="home">
+<BaseLayout pageTitle="Home page" page="home">
 	<h2>My awesome blog subtitle</h2>
 </BaseLayout>
