--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,3 @@
-
 ---
 import '../styles/global.css'
 import Footer from '../components/Footer.astro'
@@ -17,6 +16,7 @@ const { pageTitle, page } = Astro.props
 	</head>
 	<body>
 		<Header {page} />
+		<slot name="before-heading" />
     <h1>{pageTitle}</h1>
     <slot />
 		<Footer />
