--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,7 @@ a:visited {
   top: 5rem;
   left: 48px;
   background-color: #ff9776;
+  display: none;
 }
 
 .nav-links a {
@@ -63,7 +64,7 @@ a:visited {
 }
 
 .expanded {
-  display: none;
+  display: unset;
 }
 
 @media screen And (min-width: 636px) {
