--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,13 +2,12 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = `My Astro Learning Blog`;
+const posts = await Astro.glob(`./posts/*.md`)
 ---
 
 <BaseLayout {pageTitle} page="blog">
 	<p>This is where I will post about my journey learning Astro.</p>
 	<ul>
-		<li><a href="/posts/post-1/">Post 1</a></li>
-		<li><a href="/posts/post-2/">Post 2</a></li>
-		<li><a href="/posts/post-3/">Post 3</a></li>
+		{posts.map(({ frontmatter, url }) => <li><a href={url}>{frontmatter.title}</a></li>)}
 	</ul>
 </BaseLayout>
