refactor: create aliases

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,4 +12,4 @@ const { page } = Astro.props
   </nav>
 </header>
 
-<script src="../scripts/menu.js"></script>
+<script src="$scripts/menu.js"></script>
