--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import '../styles/global.css'
-import Footer from '../components/Footer.astro'
-import Header from '../components/Header.astro'
+import '$styles/global.css'
+import Footer from '$components/Footer.astro'
+import Header from '$components/Header.astro'
 
 const { pageTitle, page } = Astro.props
 ---
