--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "$layouts/BaseLayout.astro";
 
 const pageTitle = `My Astro Learning Blog`;
 const posts = await Astro.glob(`./posts/*.md`)
