--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,15 @@
 ---
-import BaseLayout from "$layouts/BaseLayout.astro";
+import BaseLayout from "$layouts/BaseLayout.astro"
+import orderBy from "lodash/orderBy"
+import BlogPost from "$components/BlogPost.astro"
 
 const pageTitle = `My Astro Learning Blog`;
-const posts = await Astro.glob(`./posts/*.md`)
+const posts = orderBy(await Astro.glob(`./posts/*.md`), `frontmatter.pubDate`)
 ---
 
 <BaseLayout {pageTitle} page="blog">
 	<p>This is where I will post about my journey learning Astro.</p>
 	<ul>
-		{posts.map(({ frontmatter, url }) => <li><a href={url}>{frontmatter.title}</a></li>)}
+		{posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
 	</ul>
 </BaseLayout>
