feat: add a tag index

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,4 +6,5 @@ const { page } = Astro.props
   <a class={page === `home` ? `active` : ``} href="/">Home</a>
   <a class={page === `about` ? `active` : ``} href="/about/">About</a>
   <a class={page === `blog` ? `active` : ``} href="/blog/">Blog</a>
+  <a class={page === `tags` ? `active` : ``} href="/tags/">Tag Index</a>
 </div>
