--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,20 @@
 ---
 import BaseLayout from '$layouts/BaseLayout.astro'
+import Greeting from '$components/Greeting'
+
+const messages = [
+	`Hi`,
+	`Hello`,
+	`Howdy`,
+	`Hey there`,
+	`Hola`,
+	`Olá`,
+	`Oi`,
+	`E aí?`,
+]
 ---
 
 <BaseLayout pageTitle="Home page" page="home">
 	<h2>My awesome blog subtitle</h2>
+	<Greeting client:load {messages} />
 </BaseLayout>
