--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -86,3 +86,12 @@ a:visited {
     display: none;
   }
 }
+
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
