--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,14 +1,15 @@
 ---
 import BaseLayout from '$layouts/BaseLayout.astro'
 import BlogPost from '$components/BlogPost.astro'
+import { getCollection } from 'astro:content'
 
 export async function getStaticPaths() {
-  const posts = await Astro.glob(`../posts/*.md`)
-  const tags = [... new Set(posts.map((post) => post.frontmatter.tags).flat())]
+  const posts = await getCollection(`posts`)
+  const tags = [... new Set(posts.map((post) => post.data.tags).flat())]
 
   return tags.map((tag) =>({
     params: { tag },
-    props: { posts: posts.filter(({ frontmatter }) => frontmatter.tags?.includes(tag))}
+    props: { posts: posts.filter(({ data }) => data.tags?.includes(tag))}
   }))
 }
 
@@ -19,6 +20,6 @@ const { posts } = Astro.props
 <BaseLayout pageTitle={tag}>
   <p>Posts tagged with {tag}</p>
   <ul>
-    {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    {posts.map((post) => <BlogPost url={`/posts/${post.slug}`} title={post.data.title} />)}
   </ul>
 </BaseLayout>
