--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -2,9 +2,10 @@
 import BaseLayout from '$layouts/BaseLayout.astro'
 import orderBy from 'lodash/orderBy'
 import Tag from '$components/Tag.astro'
+import { getCollection } from 'astro:content'
 
-const posts = await Astro.glob(`../posts/*.md`)
-const tags = [... new Set(posts.map((post) => post.frontmatter.tags).flat())]
+const posts = await getCollection(`posts`)
+const tags = [... new Set(posts.map((post) => post.data.tags).flat())]
 ---
 
 <BaseLayout pageTitle="Tag Index" page="tags">
