--- a/src/pages/posts/_PostLayout.astro
+++ b/src/pages/posts/_PostLayout.astro
@@ -28,6 +28,10 @@ const pubDate = Intl.DateTimeFormat(`pt-BR`).format(new Date(frontmatter.pubDate
     border: none;
   }
 
+  :global(.dark) button {
+    color: white;
+  }
+
   ul {
     list-style: none;
     padding: 0;
