--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions'
 import '$styles/global.css'
 import Footer from '$components/Footer.astro'
 import Header from '$components/Header.astro'
@@ -13,6 +14,7 @@ const { pageTitle, page } = Astro.props
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<ViewTransitions />
 	</head>
 	<body>
 		<Header {page} />
