feat: change default transition

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,9 +2,9 @@
 const { page } = Astro.props
 ---
 
-<div class="nav-links">
+<div transition:animate="slide" class="nav-links">
   <a class={page === `home` ? `active` : ``} href="/">Home</a>
-  <a class={page === `about` ? `active` : ``} href="/about/">About</a>
+  <a class={page === `about` ? `active` : ``} href="/about/" data-astro-reload>About</a>
   <a class={page === `blog` ? `active` : ``} href="/blog/">Blog</a>
   <a class={page === `tags` ? `active` : ``} href="/tags/">Tag Index</a>
 </div>
