--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,7 +19,7 @@ const { pageTitle, page } = Astro.props
 	<body>
 		<Header {page} />
 		<slot name="before-heading" />
-    <h1>{pageTitle}</h1>
+    <h1 transition:animate="slide">{pageTitle}</h1>
     <slot />
 		<Footer />
 	</body>
