--- a/src/pages/posts/_PostLayout.astro
+++ b/src/pages/posts/_PostLayout.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "$layouts/BaseLayout.astro";
 import Tag from "$components/Tag.astro";
 import orderBy from 'lodash/orderBy'
+import { fade } from 'astro:transitions'
 
 const { frontmatter } = Astro.props
 const pubDate = Intl.DateTimeFormat(`pt-BR`).format(new Date(frontmatter.pubDate)) 
@@ -11,8 +12,8 @@ const pubDate = Intl.DateTimeFormat(`pt-BR`).format(new Date(frontmatter.pubDate
   <button slot="before-heading" onclick="history.back()">⇐ back</button>
 
   <p>Published on: {pubDate}</p>
-  <p><em>{frontmatter.description}</em></p>
-  <p>Written by {frontmatter.author}</p>
+  <p transition:animate={fade({ duration: `2s` })}><em>{frontmatter.description}</em></p>
+  <p>Written by <a href="/about/">{frontmatter.author}</a></p>
   <img src={frontmatter.image.url} alt={frontmatter.image.alt} width="300">
 
   <slot />
